tests/NormalTests/paczka1/fuzzy1/16768271.err
Error in line 9: eDQUoeSn S392 2,6
Error in line 13: iSvDDBn A544 56,6
Error in line 22: S392 A466 81,7
Error in line 27: qL0mkHv S392 99,1
